Fixed seller scroll for loged out users on mobile

--- a/assets/css/spit-responsive.css
+++ b/assets/css/spit-responsive.css
@@ -1374,7 +1374,8 @@ Responsive queries here
     top: 0;
   }
 
-  .seller-tab-col .so-seller-filter-dropdown2 {
+  .seller-tab-col .so-seller-filter-dropdown2, 
+  body.seller-not-logged-in .so-seller-filter-dropdown2{
     padding: 8px;
     width: auto;
     min-width: auto;
